--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-gitignore": "^0.1.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "postcss": "^8.2.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
